<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authentication.login.LoginActivity">

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/image_login"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guidelineHorizontal2"
        app:srcCompat="@drawable/ic_undraw_sign_in_re_o58h" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:text="@string/login"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerticalStart"
        app:layout_constraintTop_toBottomOf="@+id/guidelineHorizontalText" />

    <ImageView
        android:id="@+id/image_login"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="25dp"
        android:alpha="0"
        android:contentDescription="@string/image_email"
        android:src="@drawable/ic_baseline_alternate_email_24"
        app:layout_constraintEnd_toStartOf="@+id/ed_login_email"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerticalStart"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

    <com.twentiecker.storyapp.custom.MyEditText
        android:id="@+id/ed_login_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:alpha="0"
        android:gravity="start"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="@+id/guidelineVerticalEnd"
        app:layout_constraintStart_toEndOf="@id/image_login"
        app:layout_constraintTop_toBottomOf="@id/titleTextView" />

    <ImageView
        android:id="@+id/image_password"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="15dp"
        android:alpha="0"
        android:contentDescription="@string/image_password"
        android:src="@drawable/ic_baseline_lock_24"
        app:layout_constraintEnd_toStartOf="@+id/ed_login_password"
        app:layout_constraintStart_toStartOf="@+id/guidelineVerticalStart"
        app:layout_constraintTop_toBottomOf="@+id/ed_login_email" />

    <com.twentiecker.storyapp.custom.MyEditText
        android:id="@+id/ed_login_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:alpha="0"
        android:gravity="start"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="@+id/guidelineVerticalEnd"
        app:layout_constraintStart_toEndOf="@id/image_password"
        app:layout_constraintTop_toBottomOf="@id/ed_login_email" />

    <com.twentiecker.storyapp.custom.MyButton
        android:id="@+id/my_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:alpha="0"
        android:enabled="false"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linear_message"
        app:layout_constraintEnd_toEndOf="@id/guidelineVerticalEnd"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guidelineVerticalStart" />

    <LinearLayout
        android:id="@+id/linear_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontalBottom"
        app:layout_constraintStart_toStartOf="@id/guidelineVerticalStart">

        <TextView
            android:id="@+id/messageTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/new_to_storyapp"
            android:textColor="@color/gray_500"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/messageRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/register"
            android:textColor="@color/blue"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.4"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal2"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.1"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalText"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.45"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontalBottom"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.9"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVerticalStart"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.1"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVerticalEnd"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.9"
        app:layout_constraintStart_toStartOf="parent" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>