<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".bike.BikeDetailActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="64dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.50"
        app:layout_constraintStart_toStartOf="parent" />

    <Space
        android:id="@+id/space1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/colorImageView"
        app:layout_constraintEnd_toStartOf="@+id/colorImageView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/colorImageView" />

    <Space
        android:id="@+id/space2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/ratingImageView"
        app:layout_constraintEnd_toStartOf="@+id/ratingImageView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/energyTextView"
        app:layout_constraintTop_toTopOf="@+id/ratingImageView" />

    <Space
        android:id="@+id/space3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/sizeImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/speedTextView"
        app:layout_constraintTop_toTopOf="@+id/sizeImageView" />

    <Space
        android:id="@+id/space4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/ratingImageView"
        app:layout_constraintEnd_toStartOf="@+id/sizeImageView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ratingTextView"
        app:layout_constraintTop_toTopOf="@+id/ratingImageView" />

    <ImageView
        android:id="@+id/profileImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:transitionName="profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guidelineHorizontal"
        tools:srcCompat="@drawable/falcon" />

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:textColor="@color/black"
        android:textSize="34sp"
        android:textStyle="bold"
        android:transitionName="name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileImageView"
        tools:text="@string/bikes_name" />

    <TextView
        android:id="@+id/storeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/store"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/nameTextView"
        app:layout_constraintTop_toBottomOf="@+id/nameTextView" />

    <TextView
        android:id="@+id/dateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/date"
        android:textSize="12sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/storeTextView"
        app:layout_constraintTop_toBottomOf="@+id/storeTextView" />

    <ImageView
        android:id="@+id/colorImageView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/energyTextView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/space1"
        app:layout_constraintTop_toBottomOf="@+id/dateTextView"
        app:srcCompat="@drawable/ic_baseline_battery_charging_full_24" />

    <ImageView
        android:id="@+id/ratingImageView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintEnd_toStartOf="@+id/ratingTextView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/space2"
        app:layout_constraintTop_toTopOf="@+id/colorImageView"
        app:srcCompat="@drawable/ic_baseline_star_rate_24" />

    <ImageView
        android:id="@+id/sizeImageView"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintEnd_toStartOf="@+id/speedTextView"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/space4"
        app:layout_constraintTop_toTopOf="@+id/ratingImageView"
        app:srcCompat="@drawable/ic_baseline_speed_24" />

    <TextView
        android:id="@+id/priceTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/price"
        android:textColor="@color/blue"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/descTextView"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/energyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/energy"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/colorImageView"
        app:layout_constraintEnd_toStartOf="@+id/space2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/colorImageView"
        app:layout_constraintTop_toTopOf="@+id/colorImageView" />

    <TextView
        android:id="@+id/ratingTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/rating"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/ratingImageView"
        app:layout_constraintEnd_toStartOf="@+id/space4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ratingImageView"
        app:layout_constraintTop_toTopOf="@+id/ratingImageView"
        app:layout_constraintVertical_bias="0.545" />

    <TextView
        android:id="@+id/speedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="sans-serif-light"
        android:text="@string/speed"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/sizeImageView"
        app:layout_constraintEnd_toStartOf="@+id/space3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/sizeImageView"
        app:layout_constraintTop_toTopOf="@+id/sizeImageView" />

    <TextView
        android:id="@+id/descTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:textSize="14sp"
        android:transitionName="description"
        app:layout_constraintBottom_toTopOf="@id/btn_rent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/colorImageView"
        tools:text="@string/description" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_rent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_button"
        android:text="@string/rent"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>